# mesh_trimming

./: CMakeLists.txt  README.md  trimming.cpp
demo/: Thumbs.db  ~$illustration.pptx
include/: MeshTrim.hpp  Tools.hpp
